[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/menubg.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://ui_themes/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/grabber.png" type="Texture" id=5]
[ext_resource path="res://ui_themes/hover.tres" type="StyleBox" id=6]
[ext_resource path="res://ui_themes/defaultY.tres" type="StyleBox" id=7]
[ext_resource path="res://ui_themes/disabled.tres" type="StyleBox" id=8]
[ext_resource path="res://ui_themes/pressed.tres" type="StyleBox" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -826.0
margin_top = 259.0
margin_right = -461.0
margin_bottom = -227.0
alignment = 1

[node name="MSAAHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 365.0
margin_bottom = 21.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/MSAAHBox"]
margin_right = 49.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "MSAA"

[node name="ValueSlider" type="HSlider" parent="VBoxContainer/MSAAHBox"]
margin_left = 53.0
margin_right = 325.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = ExtResource( 8 )
custom_styles/grabber_area_highlight = ExtResource( 6 )
custom_styles/grabber_area = ExtResource( 6 )
max_value = 3.0
rounded = true

[node name="ValueLabel" type="Label" parent="VBoxContainer/MSAAHBox"]
margin_left = 329.0
margin_right = 365.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "OFF"

[node name="FXAAHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 365.0
margin_bottom = 65.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/FXAAHBox"]
margin_top = 9.0
margin_right = 48.0
margin_bottom = 30.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "FXAA"

[node name="ValueToggle" type="CheckButton" parent="VBoxContainer/FXAAHBox"]
margin_left = 289.0
margin_right = 365.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 4 )

[node name="ShadowsHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 365.0
margin_bottom = 90.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/ShadowsHBox"]
margin_right = 182.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "Shadow Resolution"

[node name="ValueSlider" type="HSlider" parent="VBoxContainer/ShadowsHBox"]
margin_left = 186.0
margin_right = 327.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = ExtResource( 8 )
custom_styles/grabber_area_highlight = ExtResource( 9 )
custom_styles/grabber_area = ExtResource( 9 )
max_value = 3.0
rounded = true

[node name="ValueLabel" type="Label" parent="VBoxContainer/ShadowsHBox"]
margin_left = 331.0
margin_right = 365.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "Low"

[node name="FPSHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 365.0
margin_bottom = 123.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/FPSHBox"]
margin_top = 4.0
margin_right = 36.0
margin_bottom = 25.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "FPS"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/FPSHBox"]
margin_left = 40.0
margin_right = 147.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "Unlimited"
items = [ "Unlimited", null, false, 0, null, "5", null, false, 1, null, "30", null, false, 2, null, "60", null, false, 3, null, "120", null, false, 4, null, "144", null, false, 5, null ]
selected = 0

[node name="VSyncBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 365.0
margin_bottom = 167.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/VSyncBox"]
margin_top = 9.0
margin_right = 63.0
margin_bottom = 30.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "VSync"

[node name="ValueToggle" type="CheckButton" parent="VBoxContainer/VSyncBox"]
margin_left = 289.0
margin_right = 365.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 4 )

[node name="WindowMode" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 365.0
margin_bottom = 211.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/WindowMode"]
margin_top = 9.0
margin_right = 107.0
margin_bottom = 30.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"

[node name="ValueToggle" type="CheckButton" parent="VBoxContainer/WindowMode"]
margin_left = 289.0
margin_right = 365.0
margin_bottom = 40.0
size_flags_horizontal = 10

[node name="VolumeBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 365.0
margin_bottom = 236.0

[node name="OptionLabel" type="Label" parent="VBoxContainer/VolumeBox"]
margin_right = 69.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "Volume"

[node name="ValueSlider" type="HSlider" parent="VBoxContainer/VolumeBox"]
margin_left = 73.0
margin_right = 325.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = ExtResource( 8 )
custom_styles/grabber_area_highlight = ExtResource( 6 )
custom_styles/grabber_area = ExtResource( 6 )
max_value = 10.0
rounded = true

[node name="ValueLabel" type="Label" parent="VBoxContainer/VolumeBox"]
margin_left = 329.0
margin_right = 365.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "OFF"

[connection signal="value_changed" from="VBoxContainer/MSAAHBox/ValueSlider" to="." method="_on_MSAASlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ShadowsHBox/ValueSlider" to="." method="_on_ShadowSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VolumeBox/ValueSlider" to="." method="_on_VolumeSlider_value_changed"]
